--- a/index.html
+++ b/index.html
@@ -96,17 +96,12 @@
 
     <section id="announcements">
         <h2>Announcements</h2>
-        <p>New meeting times! Join us every Thursday at 6 PM.</p>
+        <p>New meeting times! Join us every Monday at 5 PM.</p>
     </section>
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <form action="submit_form.php" method="post">
-            Name: <input type="text" name="name"><br>
-            Email: <input type="email" name="email"><br>
-            Message:<br><textarea name="message" rows="5" cols="30"></textarea><br>
-            <input type="submit" value="Send">
-        </form>
+        <p>Meetings are held weekly. For details on the next meeting or to join our mailing list, please contact us: <a href="mailto:oxa318@miami.edu">oxa318@miami.edu</a></p>
     </section>
 
     <div class="footer">
