--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
         <section id="photos">
             <h2>Photos</h2>
-            <img src="photo1.jpg" alt="Math session">
-            <img src="photo2.jpg" alt="Annual math competition">
+            <img src="delaney_spr2024.jpg" alt="Delaney in her presentation on <q>What is special about 163?</q>">
+            <img src="rick_spr2024.jpg" alt="Rick in his presentation on the 5/8 theorem">
         </section>
 
         <section id="videos">
