--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
             margin-right: 10px;
         }
         img, video {
-            max-width: 100%;
-            height: auto;
+            max-width: 100%;  /* Ensures that the width of the image does not exceed the width of the viewport */
+            max-height: 80vh; /* Ensures that the height of the image does not exceed 80% of the viewport height */
+            height: auto;     /* Maintains the aspect ratio of the image */
+            object-fit: contain; /* Ensures that the entire image is scaled to fit within its content box, possibly leaving some space */
             display: block;
+            margin: 0 auto;   /* Centers the image horizontally */
             margin-bottom: 20px;
         }
     </style>
