--- a/index.html
+++ b/index.html
@@ -61,13 +61,43 @@
             margin: 0 auto;   /* Centers the image horizontally */
             margin-bottom: 20px;
         }
-    </style>
-    <script>
-        function showSection(section) {
-            const sections = document.querySelectorAll('section');
-            sections.forEach(sec => sec.style.display = 'none'); // Hide all sections
-            document.getElementById(section).style.display = 'block'; // Show the clicked section
+        #torus {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1; /* Positioned behind the content */
         }
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var scene = new THREE.Scene();
+            var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+
+            var renderer = new THREE.WebGLRenderer();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            document.body.appendChild(renderer.domElement);
+
+            var geometry = new THREE.TorusGeometry(10, 3, 16, 100);
+            var material = new THREE.MeshBasicMaterial({ color: 0xffff00, wireframe: true });
+            var torus = new THREE.Mesh(geometry, material);
+            scene.add(torus);
+
+            camera.position.z = 50;
+
+            var animate = function () {
+                requestAnimationFrame(animate);
+
+                torus.rotation.x += 0.01;
+                torus.rotation.y += 0.01;
+
+                renderer.render(scene, camera);
+            };
+
+            animate();
+        });
     </script>
 </head>
 <body>
