--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         .content {
             flex: 1;
             padding: 20px;
+            position: relative; /* Ensures absolute positioning is relative to this container */
+            overflow: hidden; /* Keeps the canvas within the content div */
         }
         h1, h2 {
             background-color: #000080;
@@ -53,35 +55,36 @@
             margin-right: 10px;
         }
         img, video {
-            max-width: 100%;  /* Ensures that the width of the image does not exceed the width of the viewport */
-            max-height: 70vh; /* Ensures that the height of the image does not exceed 80% of the viewport height */
-            height: auto;     /* Maintains the aspect ratio of the image */
-            object-fit: contain; /* Ensures that the entire image is scaled to fit within its content box, possibly leaving some space */
+            max-width: 100%;
+            max-height: 70vh;
+            height: auto;
+            object-fit: contain;
             display: block;
-            margin: 0 auto;   /* Centers the image horizontally */
+            margin: 0 auto;
             margin-bottom: 20px;
         }
         #torus {
+            width: 640px;
+            height: 640px;
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1; /* Positioned behind the content */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 0; /* Adjusted to not overlay on footer */
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var scene = new THREE.Scene();
-            var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+            var camera = new THREE.PerspectiveCamera(75, 1, 0.1, 1000); // Aspect ratio is 1 because width and height are the same
 
-            var renderer = new THREE.WebGLRenderer();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            document.body.appendChild(renderer.domElement);
+            var renderer = new THREE.WebGLRenderer({ antialias: true });
+            renderer.setSize(640, 640);
+            document.querySelector('.content').appendChild(renderer.domElement);
 
             var geometry = new THREE.TorusGeometry(10, 3, 16, 100);
-            var material = new THREE.MeshBasicMaterial({ color: 0xffff00, wireframe: true });
+            var material = new THREE.MeshBasicMaterial({ color: 0x808080, wireframe: true });
             var torus = new THREE.Mesh(geometry, material);
             scene.add(torus);
 
@@ -117,6 +120,8 @@
 
         <p class="initial">The Math Union at the University of Miami is a community of students passionate about mathematics and its applications. Join us to explore exciting math topics, discuss academic and career opportunities, and connect with fellow math enthusiasts.</p>
 
+        <!-- Canvas for the torus will be inserted here by JavaScript -->
+        
         <section id="content">
             <h2>Content</h2>
             <p>Mathematical discussions, problem-solving techniques, and more.</p>
