--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </nav>
         </header>
 
-        <p class="initial">The Math Union at the University of Miami is a community of students passionate about mathematics and its applications. Join us to explore exciting math topics, discuss academic and career opportunities, and connect with fellow math enthusiasts.</p>
+        <p class="initial">The Math Union at the University of Miami is a community of students passionate about mathematics and its applications. Join us to explore exciting math topics, discuss our love for math, and connect with fellow math enthusiasts.</p>
 
         <!-- Canvas for the torus will be inserted here by JavaScript -->
         
