--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         }
         #torus {
             width: 640px;
-            height: 480px;
+            height: 640px;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            z-index: 0; /* Adjusted to not overlay on footer */
+            z-index: 0; /* Ensures it does not overlay on the footer */
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -80,6 +80,7 @@
             var camera = new THREE.PerspectiveCamera(75, 1, 0.1, 1000); // Aspect ratio is 1 because width and height are the same
 
             var renderer = new THREE.WebGLRenderer({ antialias: true });
+            renderer.setClearColor(0x7393B3);  // Set the background color of the canvas
             renderer.setSize(640, 640);
             document.querySelector('.content').appendChild(renderer.domElement);
 
