--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         }
         .content {
             flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             padding: 20px;
             position: relative; /* Ensures absolute positioning is relative to this container */
             overflow: hidden; /* Keeps the canvas within the content div */
