--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             display: flex;
             flex-direction: column;
-            background-color: #7393B3;
+            background-color: #5a7691;
             color: white;
             font-family: 'Courier New', monospace;
         }
@@ -22,7 +22,7 @@
             overflow: hidden; /* Keeps the canvas within the content div */
         }
         h1, h2 {
-            background-color: #000080;
+            background-color: #5a7691;
             padding: 10px;
             border: 2px dashed white;
         }
