--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             display: flex;
             flex-direction: column;
-            background-color: #5a7691;
+            background-color: #7393b3;
             color: white;
             font-family: 'Courier New', monospace;
         }
@@ -27,7 +27,7 @@
             border: 2px dashed white;
         }
         p, form, section {
-            background-color: #000080;
+            background-color: #5a7691;
             padding: 10px;
             border-left: 5px solid white;
             display: none; /* Hide all sections initially */
@@ -42,7 +42,7 @@
         }
         .footer {
             padding: 10px;
-            background-color: #000080;
+            background-color: #5a7691;
             text-align: center;
             border-top: 3px double white;
         }
