--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <section id="videos">
             <h2>Videos</h2>
             <video controls>
-                <source src="math_tutorial.mp4" type="video/mp4">
+                <source src="rickroll.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
