--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                 var selectedSection = document.getElementById(sectionId);
                 if (selectedSection) {
                     selectedSection.style.display = 'block';
-                    scene.remove(torus);
+                    if (sectionId === 'Content' || sectionId === 'Photos' || sectionId === 'Videos' || sectionId === 'Annoucements' || sectionId === 'Contact Us') {
+                        scene.remove(torus);
                     }
                 }
             }
