--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 var selectedSection = document.getElementById(sectionId);
                 if (selectedSection) {
                     selectedSection.style.display = 'block';
-                    if (sectionId === 'Content' || sectionId === 'Photos' || sectionId === 'Videos' || sectionId === 'Annoucements' || sectionId === 'Contact Us') {
+                    if (sectionId === 'content' || sectionId === 'photos' || sectionId === 'videos' || sectionId === 'annoucements' || sectionId === 'contact') {
                         scene.remove(torus);
                     }
                 }
